# aegis-cardano

./: README.md
backend/: Dockerfile  dependencies.py  pyproject.toml  pytest.ini
backend/aegis/: __init__.py
backend/aegis/bot/: __init__.py  runner.py
backend/aegis/bot/discord/: __init__.py
backend/aegis/bot/telegram/: __init__.py
backend/aegis/models/: schemas.py
backend/api/endpoints/: health.py
docs/: index.rst
src/app/: page.tsx
